feat(auth): Add Google Sign-In option
Integrates Google OAuth as an alternative authentication method. This provides users with a more convenient and faster way to log in or sign up, reducing friction in the onboarding process.

--- a/index.html
+++ b/index.html
@@ -15,17 +15,14 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        /* Background handled by Tailwind classes in App.tsx */
         -webkit-tap-highlight-color: transparent;
       }
-      /* Hide scrollbar for chrome/safari/opera */
       .no-scrollbar::-webkit-scrollbar {
         display: none;
       }
-      /* Hide scrollbar for IE, Edge and Firefox */
       .no-scrollbar {
-        -ms-overflow-style: none;  /* IE and Edge */
-        scrollbar-width: none;  /* Firefox */
+        -ms-overflow-style: none;
+        scrollbar-width: none;
       }
     </style>
   <script type="importmap">
