--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
     "firebase/app": "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js",
+    "firebase/analytics": "https://www.gstatic.com/firebasejs/11.1.0/firebase-analytics.js",
     "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
