feat: Update Google Analytics ID
Switches the Google Analytics Measurement ID to the correct one for the Meu Corre 2.0 project, ensuring accurate tracking of user interactions and application usage.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Meu Corre</title>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GWS8SFWQVX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPXZ9ML0HG"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-GWS8SFWQVX');
+      gtag('config', 'G-ZPXZ9ML0HG');
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
