--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Meu Corre</title>
     
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPXZ9ML0HG"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ7NM3Z26B"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-ZPXZ9ML0HG');
+      gtag('config', 'G-RZ7NM3Z26B');
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
